--- a/CommandRe/OnlineStore.Spa/.gitignore
+++ b/CommandRe/OnlineStore.Spa/.gitignore
@@ -35,6 +35,7 @@ Obj/
 !/wwwroot/dist/_placeholder.txt
 !/ClientApp/dist/_placeholder.txt
 
+/yarn.lock
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
@@ -192,11 +193,7 @@ ClientBin/
 *.publishsettings
 orleans.codegen.cs
 
-# Workaround for https://github.com/aspnet/JavaScriptServices/issues/235
-/node_modules/**
-!/node_modules/_placeholder.txt
-
-/yarn.lock
+/node_modules
 
 # RIA/Silverlight projects
 Generated_Code/
