--- a/CommandRe/OnlineStore.Spa/package.json
+++ b/CommandRe/OnlineStore.Spa/package.json
@@ -1,62 +1,45 @@
 {
-  "name": "onlinestore",
-  "version": "1.0.0",
-  "scripts": {
-    "test": "karma start ClientApp/test/karma.conf.js"
-  },
+  "name": "OnlineStore_Spa",
+  "version": "0.0.0",
   "dependencies": {
-    "@angular/common": "^2.4.5",
-    "@angular/compiler": "^2.4.5",
-    "@angular/core": "^2.4.5",
-    "@angular/forms": "^2.4.5",
-    "@angular/http": "^2.4.5",
-    "@angular/platform-browser": "^2.4.5",
-    "@angular/platform-browser-dynamic": "^2.4.5",
-    "@angular/platform-server": "^2.4.5",
-    "@angular/router": "^3.4.5",
-    "@types/node": "^6.0.42",
-    "angular2-platform-node": "~2.0.11",
-    "angular2-template-loader": "^0.6.2",
-    "angular2-universal": "^2.1.0-rc.1",
-    "angular2-universal-patch": "^0.2.1",
-    "angular2-universal-polyfills": "^2.1.0-rc.1",
+    "@types/history": "^2.0.0",
+    "@types/react": "^0.14.29",
+    "@types/react-dom": "^0.14.14",
+    "@types/react-redux": "^4.4.29",
+    "@types/react-router": "^2.0.30",
+    "@types/react-router-redux": "4.0.30",
+    "@types/redux": "3.5.27",
+    "@types/webpack": "^2.2.0",
+    "@types/webpack-env": "^1.13.0",
     "aspnet-prerendering": "^2.0.0",
-    "aspnet-webpack": "^1.0.17",
+    "aspnet-webpack": "^1.0.27",
+    "aspnet-webpack-react": "^1.0.4",
     "awesome-typescript-loader": "^3.0.0",
-    "bootstrap": "^3.3.7",
-    "css": "^2.2.1",
-    "css-loader": "^0.25.0",
-    "es6-shim": "^0.35.1",
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.3",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "bootstrap": "^3.3.6",
+    "css-loader": "^0.23.1",
+    "domain-task": "^3.0.0",
     "event-source-polyfill": "^0.0.7",
-    "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^2.0.0-rc",
-    "file-loader": "^0.9.0",
-    "html-loader": "^0.4.4",
-    "isomorphic-fetch": "^2.2.1",
+    "file-loader": "^0.8.5",
     "jquery": "^2.2.1",
     "json-loader": "^0.5.4",
-    "preboot": "^4.5.2",
-    "raw-loader": "^0.5.1",
-    "rxjs": "^5.0.1",
-    "style-loader": "^0.13.1",
-    "to-string-loader": "^1.1.5",
+    "node-noop": "^1.0.0",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.8.1",
+    "react-router-redux": "^4.0.6",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
+    "style-loader": "^0.13.0",
     "typescript": "^2.2.1",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.0",
     "webpack-hot-middleware": "^2.12.2",
-    "webpack-merge": "^0.14.1",
-    "zone.js": "^0.7.6"
-  },
-  "devDependencies": {
-    "@types/chai": "^3.4.34",
-    "@types/jasmine": "^2.5.37",
-    "chai": "^3.5.0",
-    "jasmine-core": "^2.5.2",
-    "karma": "^1.3.0",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-webpack": "^1.8.0"
+    "webpack-merge": "^0.14.1"
   }
 }
