ME: add initial migration

--- a/CommandRe/OnlineStore.API/appsettings.json
+++ b/CommandRe/OnlineStore.API/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
-  "Data": {
-    "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=MyCodeCampDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  "ConnectionStrings": {
+    "OnlineStore": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=OnlineStoreDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "IncludeScopes": false,
