--- a/CommandRe/OnlineStore.Data/OnlineStore.Data.csproj
+++ b/CommandRe/OnlineStore.Data/OnlineStore.Data.csproj
@@ -14,4 +14,9 @@
     <Folder Include="Repositories\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="1.1.1" />
+  </ItemGroup>
+
 </Project>
